--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "ServerEndpoint": "http://chain-data.ddns.net",
+  "ServerEndpoint": "http://hnv-data.ddns.net",
   "FolderPath": "/home/nkn/linux-amd64"
 }
